Custom--app/main/default/objects/Acq_Prospect__c/Acq_Prospect__c.object-meta.xml
<CustomObject>
    <description>This is part of the Acquisitions deployment and is the "entry point" for all records from brokers / bulk upload / Entera integrations.</description>
    <label>Prospect</label>
    <nameField>
        <displayFormat>PROS-{00000}</displayFormat>
        <label>Acq Prospect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>