Custom--app/main/default/objects/Acq_Prospect__c/fields/Accepted_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Contract_Date__c</fullName>
    <formula>Opportunity__r.Accepted_Contract_Date__c</formula>
    <label>Accepted Contract Date</label>
    <type>Date</type>
</CustomField>