Custom--app/main/default/objects/Acq_Prospect__c/fields/Acq_Budget_Walk_Status__c.field-meta.xml
<CustomField>
    <fullName>Acq_Budget_Walk_Status__c</fullName>
    <label>Acq Budget Walk Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>