Custom--app/main/default/objects/Acq_Prospect__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address ID</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Acq_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>