Custom--app/main/default/objects/Acq_Prospect__c/fields/Annual_Insurance_Est_UW__c.field-meta.xml
<CustomField>
    <fullName>Annual_Insurance_Est_UW__c</fullName>
    <formula>Market__r.Insurance_Per_Home__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Insurance Est @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>