Custom--app/main/default/objects/Acq_Prospect__c/fields/APN__c.field-meta.xml
<CustomField>
    <fullName>APN__c</fullName>
    <formula>Opportunity__r.APN__c</formula>
    <label>APN</label>
    <type>Text</type>
</CustomField>