Custom--app/main/default/objects/Acq_Prospect__c/fields/Approved_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Approved_Offer_Price__c</fullName>
    <label>Approved Offer Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>