Custom--app/main/default/objects/Acq_Prospect__c/fields/Bath_Score__c.field-meta.xml
<CustomField>
    <fullName>Bath_Score__c</fullName>
    <formula>IF(
				Baths__c&lt;1,
				3,
				IF(
								AND(
												Baths__c>=1,
												Baths__c&lt;2
								),
								2,
								IF(
												AND(
																Baths__c>=2,
																Baths__c&lt;2.50
												),
												3,
												IF(
																AND(
																				Baths__c>=2.50,
																				Baths__c&lt;3.50
																),
																4,
																IF(
																				AND(
																								Baths__c>=3.50,
																								Baths__c&lt;=7
																				),
																				5,
																				5)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bath Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>