Custom--app/main/default/objects/Acq_Prospect__c/fields/Bed_Score__c.field-meta.xml
<CustomField>
    <fullName>Bed_Score__c</fullName>
    <formula>IF(
				VALUE(Bedrooms__c) &lt; 1,3,
				IF(
								AND(
												VALUE(Bedrooms__c)>=1,
												VALUE(Bedrooms__c)&lt;2),
												1,
								
								IF(
												AND(
																VALUE(Bedrooms__c)>=2,
																VALUE(Bedrooms__c)&lt;3),
												2,
												IF(
																AND(
																				VALUE(Bedrooms__c)>=3,
																				VALUE(Bedrooms__c)&lt;4),
																4,
																IF(
																				AND(
																								VALUE(Bedrooms__c)>=4,
																								VALUE(Bedrooms__c)&lt;5),
																				5,
																				IF(
																								AND(
																												VALUE(Bedrooms__c)>=5,
																												VALUE(Bedrooms__c)&lt;6),
																								4,
																								IF(
																												AND(
																																VALUE(Bedrooms__c)>=6,
																																VALUE(Bedrooms__c)&lt;8),
																												3,3)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>