Custom--app/main/default/objects/Acq_Prospect__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <formula>Text(Opportunity__r.Bedrooms__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bedrooms</label>
    <type>Text</type>
</CustomField>