Custom--app/main/default/objects/Acq_Prospect__c/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <label>Bid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Sale</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>Short Sale</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Bulk Sale</fullName>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>