Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Broker_Cap_Rate__c</fullName>
    <formula>Opportunity__r.Broker_Cap_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Cap Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>