Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Closing_Title_Fees_Est__c.field-meta.xml
<CustomField>
    <fullName>Broker_Closing_Title_Fees_Est__c</fullName>
    <formula>Opportunity__r.Broker_Closing_Title_Fees_Est__c</formula>
    <label>Broker Closing/Title Fees Est.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>