Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Broker_Market_Value__c</fullName>
    <formula>Opportunity__r.Broker_Market_Value__c</formula>
    <label>Broker Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>