Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Market_Value_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Market_Value_Comments__c</fullName>
    <formula>Opportunity__r.Broker_Market_Value_Comments__c</formula>
    <label>Broker Market Value Comments</label>
    <type>Text</type>
</CustomField>