Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Market_Value_Comps__c.field-meta.xml
<CustomField>
    <fullName>Broker_Market_Value_Comps__c</fullName>
    <formula>Opportunity__r.Broker_Comps__c</formula>
    <label>Broker Market Value Comps</label>
    <type>Text</type>
</CustomField>