Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <formula>Opportunity__r.Broker__r.Full_Name__c</formula>
    <label>Broker Name</label>
    <type>Text</type>
</CustomField>