Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Offer_Date__c</fullName>
    <formula>Opportunity__r.Broker_Offer_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Offer Date</label>
    <type>Date</type>
</CustomField>