Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Broker_Offer_Status__c</fullName>
    <formula>Text(Opportunity__r.Broker_Offer_Status__c)</formula>
    <label>Broker Offer Status</label>
    <type>Text</type>
</CustomField>