Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Property_Tax__c.field-meta.xml
<CustomField>
    <fullName>Broker_Property_Tax__c</fullName>
    <formula>Opportunity__r.Broker_Property_Taxes__c</formula>
    <label>Broker Property Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>