Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rehab__c</fullName>
    <formula>Opportunity__r.Broker_Rehab__c</formula>
    <label>Broker Rehab</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>