Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Rehab_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rehab_Comments__c</fullName>
    <formula>Opportunity__r.Broker_Rehab_Comments__c</formula>
    <label>Broker Rehab Comments</label>
    <type>Text</type>
</CustomField>