Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Rent__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rent__c</fullName>
    <formula>Opportunity__r.Broker_Monthly_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>