Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_Requested_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Broker_Requested_Offer_Amount__c</fullName>
    <formula>Opportunity__r.Broker_Offer_Price__c</formula>
    <label>Broker Requested Offer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>