Custom--app/main/default/objects/Acq_Prospect__c/fields/Broker_to_IH_Offer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_to_IH_Offer_Comments__c</fullName>
    <formula>Opportunity__r.Broker_Offer_Comments__c</formula>
    <label>Broker to IH Offer Comments</label>
    <type>Text</type>
</CustomField>