Custom--app/main/default/objects/Acq_Prospect__c/fields/Budget_Walk_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Budget_Walk_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Walk Ordered</label>
    <type>Checkbox</type>
</CustomField>