Custom--app/main/default/objects/Acq_Prospect__c/fields/Cap_Rate_UW__c.field-meta.xml
<CustomField>
    <fullName>Cap_Rate_UW__c</fullName>
    <formula>Pro_forma_NOI_UW__c / Cost_Basis_Est_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cap Rate @ UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>