Custom--app/main/default/objects/Acq_Prospect__c/fields/Capitilized_Acq_Labor_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Capitilized_Acq_Labor_Estimate__c</fullName>
    <formula>Market__r.Capitalized_Acq_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capitilized Acq Labor Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>