Custom--app/main/default/objects/Acq_Prospect__c/fields/Closing_Title_Acq_Cost_Est__c.field-meta.xml
<CustomField>
    <fullName>Closing_Title_Acq_Cost_Est__c</fullName>
    <label>Closing/Title/Acq Cost Est</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>