Custom--app/main/default/objects/Acq_Prospect__c/fields/Complete_Address_del__c.field-meta.xml
<CustomField>
    <fullName>Complete_Address_del__c</fullName>
    <formula>Address__r.Street__c &amp;', '&amp; Address__r.City__c &amp;', '&amp; IF(Address__r.State__r.Name = '', '', Address__r.State__r.Name &amp;', ') &amp; Address__r.Zip__c</formula>
    <label>Complete Address</label>
    <type>Text</type>
</CustomField>