Custom--app/main/default/objects/Acq_Prospect__c/fields/Controllable_Expenses_UW__c.field-meta.xml
<CustomField>
    <fullName>Controllable_Expenses_UW__c</fullName>
    <formula>-1*(Total_Revenue_UW__c * Market__r.Control_Pool_Exp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controllable Expenses @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>