Custom--app/main/default/objects/Acq_Prospect__c/fields/Converted_to_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked only when the instruction is to convert to pipeline</description>
    <label>Converted to Pipeline</label>
    <type>Checkbox</type>
</CustomField>