Custom--app/main/default/objects/Acq_Prospect__c/fields/Converted_to_Pipeline_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Pipeline_Date__c</fullName>
    <description>Date Populated when the record gets converted to pipeline</description>
    <label>Converted to Pipeline Date</label>
    <type>Date</type>
</CustomField>