Custom--app/main/default/objects/Acq_Prospect__c/fields/Cost_Basis_as_of_MV__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_as_of_MV__c</fullName>
    <formula>Cost_Basis_Est_UW__c / Market_Value_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Basis as % of MV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>