Custom--app/main/default/objects/Acq_Prospect__c/fields/Cost_Basis_as_of_Prior_High__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_as_of_Prior_High__c</fullName>
    <formula>Cost_Basis_Est_UW__c /  Previous_High_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Basis as % of Prior High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>