Custom--app/main/default/objects/Acq_Prospect__c/fields/Cost_Basis_Discount_to_MV__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_Discount_to_MV__c</fullName>
    <formula>1 - Cost_Basis_as_of_MV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Basis Discount to MV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>