Custom--app/main/default/objects/Acq_Prospect__c/fields/Cost_Basis_Est_UW__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_Est_UW__c</fullName>
    <formula>Purchase_Price__c + Initial_Rehab_Budget_Estimate__c  + Closing_Title_Acq_Cost_Est__c + Capitalized_Acq_Costs_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Basis Est @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>