Custom--app/main/default/objects/Acq_Prospect__c/fields/Cost_Basis_Est_UW_PSF__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_Est_UW_PSF__c</fullName>
    <formula>Cost_Basis_Est_UW__c / Square_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Basis Est @ UW PSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>