Custom--app/main/default/objects/Acq_Prospect__c/fields/Cost_Basis_to_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_to_Market_Value__c</fullName>
    <formula>1- Cost_Basis_as_of_MV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Basis to Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>