Custom--app/main/default/objects/Acq_Prospect__c/fields/Current_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_List_Price__c</fullName>
    <formula>Opportunity__r.Current_List_Price__c</formula>
    <label>Current List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>