Custom--app/main/default/objects/Acq_Prospect__c/fields/Director_IMG_Offer_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Director_IMG_Offer_Approval_Date__c</fullName>
    <label>Director IMG Offer Approval Date</label>
    <type>Date</type>
</CustomField>