Custom--app/main/default/objects/Acq_Prospect__c/fields/doReopen__c.field-meta.xml
<CustomField>
    <fullName>doReopen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doReopen</label>
    <type>Checkbox</type>
</CustomField>