Custom--app/main/default/objects/Acq_Prospect__c/fields/doSubmitForOffer__c.field-meta.xml
<CustomField>
    <fullName>doSubmitForOffer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doSubmitForOffer</label>
    <type>Checkbox</type>
</CustomField>