Custom--app/main/default/objects/Acq_Prospect__c/fields/Effective_Gross_Income_UW__c.field-meta.xml
<CustomField>
    <fullName>Effective_Gross_Income_UW__c</fullName>
    <formula>Total_Revenue_UW__c + Fixed_Expenses_Inc_Pool_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Gross Income @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>