Custom--app/main/default/objects/Acq_Prospect__c/fields/Effective_Gross_Yield_UW__c.field-meta.xml
<CustomField>
    <fullName>Effective_Gross_Yield_UW__c</fullName>
    <formula>Effective_Gross_Income_UW__c / Cost_Basis_Est_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Gross Yield @ UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>