Custom--app/main/default/objects/Acq_Prospect__c/fields/EGI_Margin_UW__c.field-meta.xml
<CustomField>
    <fullName>EGI_Margin_UW__c</fullName>
    <formula>Effective_Gross_Income_UW__c / Total_Revenue_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EGI Margin @ UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>