Custom--app/main/default/objects/Acq_Prospect__c/fields/Entera_ID__c.field-meta.xml
<CustomField>
    <fullName>Entera_ID__c</fullName>
    <label>Entera ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>