Custom--app/main/default/objects/Acq_Prospect__c/fields/Escrow_Amount__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Amount__c</fullName>
    <formula>Opportunity__r.Escrow_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>