Custom--app/main/default/objects/Acq_Prospect__c/fields/Escrow_Company__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company__c</fullName>
    <formula>Opportunity__r.Escrow_Company__c</formula>
    <label>Escrow Company by Broker</label>
    <type>Text</type>
</CustomField>