Custom--app/main/default/objects/Acq_Prospect__c/fields/Escrow_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>