Custom--app/main/default/objects/Acq_Prospect__c/fields/Escrow_Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Expected_Close_Date__c</fullName>
    <formula>Opportunity__r.Escrow_Expected_Close_Date__c</formula>
    <label>Escrow Expected Close Date</label>
    <type>Date</type>
</CustomField>