Custom--app/main/default/objects/Acq_Prospect__c/fields/Fixed_Expenses_Inc_Pool_UW__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Expenses_Inc_Pool_UW__c</fullName>
    <formula>-1*(Property_Tax_Est_UW__c + (Monthly_HOA_UW__c *12) + Annual_Insurance_Est_UW__c+ IF(Pool__c=TRUE,  Market__r.Pool_Exp_Per_Home__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Expenses (Inc. Pool) @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>