Custom--app/main/default/objects/Acq_Prospect__c/fields/HVAC_Type__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Type__c</fullName>
    <formula>Text(Opportunity__r.HVAC_Type__c )</formula>
    <label>HVAC Type</label>
    <type>Text</type>
</CustomField>