Custom--app/main/default/objects/Acq_Prospect__c/fields/IH_Offer_Notes__c.field-meta.xml
<CustomField>
    <fullName>IH_Offer_Notes__c</fullName>
    <label>IH Offer Notes</label>
    <type>TextArea</type>
</CustomField>