Custom--app/main/default/objects/Acq_Prospect__c/fields/IH_Stage__c.field-meta.xml
<CustomField>
    <fullName>IH_Stage__c</fullName>
    <label>IH Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Cancelled/Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>