Custom--app/main/default/objects/Acq_Prospect__c/fields/IMG_Analyst__c.field-meta.xml
<CustomField>
    <fullName>IMG_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default to market based assignment but can be changed if needed</description>
    <label>Analyst IMG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Acq_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>