Custom--app/main/default/objects/Acq_Prospect__c/fields/IMG_Director__c.field-meta.xml
<CustomField>
    <fullName>IMG_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default to market based assignment but can be changed if needed</description>
    <label>Director IMG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Acq_Prospects1</relationshipName>
    <type>Lookup</type>
</CustomField>