Custom--app/main/default/objects/Acq_Prospect__c/fields/Initial_Rehab_Budget_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Budget_Estimate__c</fullName>
    <label>Initial Rehab Budget Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>