Custom--app/main/default/objects/Acq_Prospect__c/fields/Initial_Rehab_Roof_Replace__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Roof_Replace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Rehab - Roof Replace</label>
    <type>Checkbox</type>
</CustomField>