Custom--app/main/default/objects/Acq_Prospect__c/fields/Initial_Rehab_Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Scope_Notes__c</fullName>
    <label>Initial Rehab Scope Notes</label>
    <type>TextArea</type>
</CustomField>