Custom--app/main/default/objects/Acq_Prospect__c/fields/Listing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Listing_Activity__c</fullName>
    <formula>Text(Opportunity__r.Listing_scenario__c)</formula>
    <label>Listing Activity</label>
    <type>Text</type>
</CustomField>