Custom--app/main/default/objects/Acq_Prospect__c/fields/Listing_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Activity_Date__c</fullName>
    <formula>Opportunity__r.Listing_Date__c</formula>
    <label>Listing Activity Date</label>
    <type>Date</type>
</CustomField>