Custom--app/main/default/objects/Acq_Prospect__c/fields/Listing_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Date__c</fullName>
    <formula>Opportunity__r.Original_Listing_Date__c</formula>
    <label>Listing Date</label>
    <type>Date</type>
</CustomField>