Custom--app/main/default/objects/Acq_Prospect__c/fields/Lot_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Lot_Sq_Ft__c</fullName>
    <formula>Text(Opportunity__r.Lot_Sq_Ft__c )</formula>
    <label>Lot Sq/Ft</label>
    <type>Text</type>
</CustomField>