Custom--app/main/default/objects/Acq_Prospect__c/fields/Market_Value_UW__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_UW__c</fullName>
    <label>Market Value @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>