Custom--app/main/default/objects/Acq_Prospect__c/fields/Market_Value_UW_Analyst_Notes__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_UW_Analyst_Notes__c</fullName>
    <label>Market Value @ UW Analyst Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>