Custom--app/main/default/objects/Acq_Prospect__c/fields/Market_Value_UW_Director_Notes__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_UW_Director_Notes__c</fullName>
    <label>Market Value @ UW Director Notes</label>
    <type>TextArea</type>
</CustomField>