Custom--app/main/default/objects/Acq_Prospect__c/fields/MLS__c.field-meta.xml
<CustomField>
    <fullName>MLS__c</fullName>
    <formula>Opportunity__r.MLS__c</formula>
    <label>MLS#</label>
    <type>Text</type>
</CustomField>