Custom--app/main/default/objects/Acq_Prospect__c/fields/Most_Recent_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Activity_Date__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>Most Recent Activity Date</label>
    <type>Date</type>
</CustomField>