Custom--app/main/default/objects/Acq_Prospect__c/fields/Occupied_Status_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Status_Diligence__c</fullName>
    <label>Occupied Status @ Diligence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller Occupied</fullName>
                <default>true</default>
                <label>Seller Occupied</label>
            </value>
            <value>
                <fullName>Tenant Occupied</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>