Custom--app/main/default/objects/Acq_Prospect__c/fields/Offer_Price_Max_Bid__c.field-meta.xml
<CustomField>
    <fullName>Offer_Price_Max_Bid__c</fullName>
    <label>Offer Price/Max Bid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>