Custom--app/main/default/objects/Acq_Prospect__c/fields/Offer_Type_Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type_Bid_Type__c</fullName>
    <formula>Text( Opportunity__r.Bid_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Type (Bid Type)</label>
    <type>Text</type>
</CustomField>