Custom--app/main/default/objects/Acq_Prospect__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity ID</label>
    <referenceTo>Acq_Opportunity__c</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Acq_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>