Custom--app/main/default/objects/Acq_Prospect__c/fields/Other_Inc_Conc_Bad_Debt_UW__c.field-meta.xml
<CustomField>
    <fullName>Other_Inc_Conc_Bad_Debt_UW__c</fullName>
    <formula>Rental_Income_UW__c * Market__r.OI_Conc_BD_as_of_RI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Inc/Conc/Bad Debt @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>