Custom--app/main/default/objects/Acq_Prospect__c/fields/Overall_Asset_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Asset_Score__c</fullName>
    <formula>(Location_Score__c +  Property_Score__c ) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Asset Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>