Custom--app/main/default/objects/Acq_Prospect__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <formula>Text( Opportunity__r.Parking__c )</formula>
    <label>Parking</label>
    <type>Text</type>
</CustomField>