Custom--app/main/default/objects/Acq_Prospect__c/fields/Pool_Score__c.field-meta.xml
<CustomField>
    <fullName>Pool_Score__c</fullName>
    <formula>IF (Pool__c = true,5,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pool Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>