Custom--app/main/default/objects/Acq_Prospect__c/fields/Previous_High_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_High_Value__c</fullName>
    <label>Previous High Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>