Custom--app/main/default/objects/Acq_Prospect__c/fields/Previous_High_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_High_Value_Date__c</fullName>
    <label>Previous High Value Date</label>
    <type>Date</type>
</CustomField>