Custom--app/main/default/objects/Acq_Prospect__c/fields/Pro_forma_NOI_UW__c.field-meta.xml
<CustomField>
    <fullName>Pro_forma_NOI_UW__c</fullName>
    <formula>Effective_Gross_Income_UW__c + Controllable_Expenses_UW__c + Direct_Shared_Services_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro-forma NOI @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>