Custom--app/main/default/objects/Acq_Prospect__c/fields/Property_Access_Contact__c.field-meta.xml
<CustomField>
    <fullName>Property_Access_Contact__c</fullName>
    <formula>Opportunity__r.Property_Access_Contact__c</formula>
    <label>Property Access Contact</label>
    <type>Text</type>
</CustomField>